--- a/Recurop/Recurop.csproj
+++ b/Recurop/Recurop.csproj
@@ -2,16 +2,18 @@
 
   <PropertyGroup>
     <Title>Recurop</Title>
+    <Product>Recurop</Product>
     <TargetFramework>netstandard2.0</TargetFramework>
     <PackageTags>recurop recurring operations threading timer</PackageTags>
     <Authors>Diego Rönkkömäki</Authors>
     <Company />
     <Description>Recurop makes creating, managing and monitoring timer based recurring operation and functions easy.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageId>TDMR.Recurop</PackageId>
+    <PackageId>Recurop</PackageId>
     <Copyright>2021</Copyright>
     <RepositoryUrl>https://github.com/TDMR87/Recurop</RepositoryUrl>
     <PackageReleaseNotes>Initial release</PackageReleaseNotes>
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
 </Project>
