--- a/Recurop/Recurop.csproj
+++ b/Recurop/Recurop.csproj
@@ -7,7 +7,7 @@
     <PackageTags>recurop recurring operations threading timer</PackageTags>
     <Authors>Diego Rönkkömäki</Authors>
     <Company />
-    <Description>Recurop makes creating, managing and monitoring timer based recurring operation and functions easy.</Description>
+    <Description>Recurop makes creating, managing and monitoring timer based recurring operations easy.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageId>Recurop</PackageId>
     <Copyright>2021</Copyright>
@@ -15,5 +15,9 @@
     <PackageReleaseNotes>Initial release</PackageReleaseNotes>
     <Version>1.0.0</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+  </ItemGroup>
 
 </Project>
