--- a/Recurop/Recurop.csproj
+++ b/Recurop/Recurop.csproj
@@ -7,13 +7,15 @@
     <PackageTags>recurop recurring operations threading timer</PackageTags>
     <Authors>Diego Rönkkömäki</Authors>
     <Company />
-    <Description>Recurop makes creating, managing and monitoring timer based recurring operations easy.</Description>
+    <Description>Recurop (short for recurring operation) is an abstraction based on the System.Threading.Timer. With Recurop you can create functions which need to run on certain intervals and also manage them so that they're thread safe and easily controlled (start, pause, resume, stop).</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageId>Recurop</PackageId>
     <Copyright>2021</Copyright>
     <RepositoryUrl>https://github.com/TDMR87/Recurop</RepositoryUrl>
-    <PackageReleaseNotes>Initial release</PackageReleaseNotes>
-    <Version>1.0.0</Version>
+    <PackageReleaseNotes>Added an extension method for IServiceCollection (Microsoft.Extensions.DependencyInjection) which initializes the RecurringOperationManager as a singleton service in the DI container.
+
+This version also changes the name of the Manager singleton class.</PackageReleaseNotes>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
